# iats

./: .gitignore  .gitmodules  README.adoc
ocr-demo/: dataset.ipynb  ios_convert.ipynb  pyproject.toml  train.ipynb
torch-ios-conv/: main.py  ocr.ipynb  pyproject.toml
