[project]
name = "ocr-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coremltools>=9.0",
    "gradio>=6.9.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "toml>=0.10.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
